--- a/ToDoList/style.css
+++ b/ToDoList/style.css
@@ -3,6 +3,7 @@ margin: 0;
 padding: 0;
 color:#d9d9d9;
 background:#161616;
+font-family: 'Roboto', sans-serif;
 }
 
 .MyToDoList{
@@ -32,9 +33,7 @@ background:#161616;
   border-radius:5px;
 }
 
-.header_MyToDoList h2{
- text-align: center;
-}
+
 
 .MyList li{
   list-style: none;
@@ -61,16 +60,16 @@ justify-content: space-between;
   position: absolute;
   right: 0;
   top: 0;
-  padding: 20px 20px 12px 16px;
-  font-size: 32px;
+  padding: 10px 20px 12px 16px;
+font-size: 26px;
 }
 
 .list-item{
   width: 98%;
   position: relative;
-  padding: 15px 0 15px 10px;
+  
   background:#252525;
-  margin-bottom: 15px;
+  margin: 15px 0;
   border-radius:7px;
   cursor: pointer;
   display: flex;
@@ -80,7 +79,14 @@ align-items: center;
 .MyDayRouteCalendar{
   display: flex;
   justify-content: space-around;
+  margin: 2.5vw 0;
 }
+.MyToDoList_header-motto{
+  font-weight: normal;
+  font-size: 28px;
+
+}
+
 
 .none{
   display: none;
@@ -142,4 +148,20 @@ box-shadow: 4px 3px 3px #666565;
   position: absolute;
   left:24%;
   z-index: 1;
+}
+.MyToDoList__data_time{
+  font-size: 18px;
+  text-align: center;
+}
+
+.MyToDoList_header-text{
+  font-weight: normal;
+  text-align: center;
+  font-size: 38px;
+  padding-bottom: 20px;
+}
+
+.text-list-item{
+  width: 90%;
+  padding: 5px;
 }
